test_case/rust-lang_rust/35245_237666808.rs

error[E0106]: missing lifetime specifier
  --> src/test/compile-fail/E0106.rs:12:8
   |
12 |     x: &bool, //~ ERROR E0106
   |        ^ expected lifetime parameter

